--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "stellar-base": "^0.7.6"
   },
   "scripts": {
     "start": "react-scripts start",
