--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "stellar-base": "^0.7.6"
+    "stellar-base": "^0.7.6",
+    "stellar-sdk": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
