--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
+    "pretty-checkbox": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
