--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ledgerhq/hw-app-str": "^4.0.0",
+    "@ledgerhq/hw-transport-u2f": "^4.0.0",
     "axios": "^0.17.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
