Config: added space-before-function-paren rule to eslint config and relinted two files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,10 @@
             "error",
             "never"
         ],
+        "space-before-function-paren": [
+            "error",
+            "always"
+        ],
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
         "comma-dangle": [
