--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ledgerhq/hw-app-str": "^4.0.0",
     "@ledgerhq/hw-transport-u2f": "^4.0.0",
     "axios": "^0.17.1",
+    "bignumber.js": "^6.0.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
     "number-to-text": "^0.3.2",
