--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.18.0",
     "eslint-plugin-react": "^7.6.1"
   }
