--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "commonjs"
+        "target": "esnext",
+        "module": "es6"
     },
     "checkJs" : true
 }
