jsconfig.json - back to 'commonjs' module setting.

--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "esnext",
-        "module": "es6"
+        "module": "commonjs"
     },
     "checkJs" : true
 }
