--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "eslint": "^4.18.0",
-    "eslint-plugin-react": "^7.6.1"
+    "eslint-plugin-react": "^7.6.1",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
