--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ledgerhq/hw-transport-u2f": "^4.0.0",
     "axios": "^0.17.1",
     "bignumber.js": "^6.0.0",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
     "number-to-text": "^0.3.2",
@@ -15,6 +16,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
