Configuration: jsconfig.json JSX support.
Added configuration for vscode allowing "go to definition" and "find all references"
options to work also in *.jsx files.

--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,7 +1,13 @@
 {
     "compilerOptions": {
         "target": "esnext",
-        "module": "commonjs"
+        "module": "commonjs",
+        "jsx": "react"
+    },
+    "compilerOptions.jsx": {
+        "target": "esnext",
+        "module": "commonjs",
+        "jsx": "react"
     },
     "checkJs" : true
 }
