--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
     "name": "cygnus",
     "version": "0.1.32",
+    "description": "Stellar Fox (frontend)",
+    "keywords": [
+        "stellar", "remittance", "bank", "frontend"
+    ],
+    "homepage": "https://stellarfox.net/",
+    "bugs": {
+        "url": "https://github.com/stellar-fox/cygnus/issues"
+    },
+    "license": "Apache-2.0",
     "private": true,
+    "contributors": ["syntaxval", "drmats"],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/stellar-fox/cygnus.git"
+    },
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.0.0",
         "@ledgerhq/hw-transport-u2f": "^4.0.0",
