--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cygnus",
-    "version": "0.1.34",
+    "version": "0.1.35",
     "description": "Stellar Fox (frontend)",
     "keywords": [
         "stellar",
@@ -43,10 +43,10 @@
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
         "react-redux": "^5.0.7",
-        "react-router-dom": "^4.2.2",
+        "react-router-dom": "^4.3.0-rc.2",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
-        "redux": "^3.7.2",
+        "redux": "^4.0.0-rc.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.2.0",
         "resolve-pathname": "^2.2.0",
