--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "material-ui": "^0.20.0",
         "number-to-text": "^0.3.2",
         "prop-types": "^15.6.1",
+        "raf": "^3.4.0",
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
         "react-redux": "^5.0.7",
