--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "hoist-non-react-statics": "^2.5.0",
         "lodash": "^4.17.5",
         "material-ui": "^0.20.0",
+        "material-ui-next": "^1.0.0-beta.42",
         "number-to-text": "^0.3.2",
         "prop-types": "^15.6.1",
         "raf": "^3.4.0",
