Config: installed implicit mui-next dependencies explicitly: JSS and React-JSS.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "classnames": "^2.2.5",
         "history": "^4.7.2",
         "hoist-non-react-statics": "^2.5.0",
+        "jss": "^9.8.1",
         "lodash": "^4.17.10",
         "material-ui": "^0.20.0",
         "material-ui-next": "^1.0.0-beta.44",
@@ -54,10 +55,13 @@
         "raf": "^3.4.0",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
+        "react-event-listener": "^0.5.3",
+        "react-jss": "^8.4.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.0-rc.3",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
+        "react-scrollbar-size": "^2.1.0",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.2.0",
