--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.2.0",
         "resolve-pathname": "^2.2.0",
+        "sha.js": "^2.4.11",
         "stellar-base": "^0.7.6",
         "stellar-sdk": "^0.8.0",
         "toml": "^2.3.3",
