--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
         "react/no-deprecated": 1,
         "react/no-direct-mutation-state": 0,
         "react/react-in-jsx-scope": 2,
-        "react/jsx-space-before-closing": [2, "always"],
+        "react/jsx-tag-spacing": [2, { "beforeSelfClosing": "always" }],
         "react/sort-comp": [2, {
             "order": [
                 "static-methods",
