--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     },
     "main": "src/index.js",
     "scripts": {
-        "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "lint": "eslint ./src/",
+        "start": "react-scripts start",
+        "test": "react-scripts test --env=jsdom"
     },
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.0.0",
