Config: 'clean' and 'clean_modules' npm script added.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "main": "src/index.js",
     "scripts": {
         "build": "react-scripts build",
+        "clean": "rimraf build",
+        "clean_modules": "rimraf node_modules",
         "eject": "react-scripts eject",
         "lint": "eslint ./src/",
         "start": "react-scripts start",
@@ -77,6 +79,7 @@
         "babel-eslint": "^8.2.2",
         "eslint": "^4.19.1",
         "eslint-config-react-app": "^2.1.0",
-        "eslint-plugin-react": "^7.7.0"
+        "eslint-plugin-react": "^7.7.0",
+        "rimraf": "^2.6.2"
     }
 }
