--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@ledgerhq/hw-transport-u2f": "^4.0.0",
         "@material-ui/core": "^1.0.0-rc.0",
         "@material-ui/icons": "^1.0.0-rc.0",
+        "@xcmats/js-toolbox": "^0.1.1",
         "axios": "^0.18.0",
         "bignumber.js": "^6.0.0",
         "classnames": "^2.2.5",
