--- a/package.json
+++ b/package.json
@@ -58,6 +58,10 @@
         "eslint-plugin-react": "^7.7.0",
         "rimraf": "^2.6.2"
     },
+    "engines": {
+        "node": ">=6.0.0",
+        "npm": ">=5.0.0"
+    },
     "homepage": "https://stellarfox.net/",
     "keywords": [
         "bank",
