--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.0.0",
         "@ledgerhq/hw-transport-u2f": "^4.0.0",
-        "@material-ui/core": "^1.0.0-rc.0",
-        "@material-ui/icons": "^1.0.0-rc.0",
+        "@material-ui/core": "^1.0.0",
+        "@material-ui/icons": "^1.0.0",
         "@xcmats/js-toolbox": "^0.1.2",
         "axios": "^0.18.0",
         "bignumber.js": "^6.0.0",
