Add fuse.js library for fuzzy search

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "axios": "^0.18.0",
         "bignumber.js": "^6.0.0",
         "classnames": "^2.2.5",
+        "fuse.js": "^3.2.0",
         "history": "^4.7.2",
         "hoist-non-react-statics": "^2.5.0",
         "jss": "^9.8.1",
