--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
         "react-scrollbar-size": "^2.1.0",
+        "react-swipeable-views": "^0.12.13",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.2.0",
