--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@material-ui/core": "^1.0.0",
         "@material-ui/icons": "^1.0.0",
         "@xcmats/js-toolbox": "^0.3.1",
+        "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
         "bignumber.js": "^7.2.0",
         "classnames": "^2.2.5",
@@ -33,6 +34,7 @@
         "prop-types": "^15.6.1",
         "raf": "^3.4.0",
         "react": "^16.3.2",
+        "react-autosuggest": "^9.3.4",
         "react-dom": "^16.3.2",
         "react-event-listener": "^0.5.3",
         "react-jss": "^8.4.0",
