--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "node": ">=6.0.0",
         "npm": ">=5.0.0"
     },
-    "homepage": "https://stellarfox.net/",
+    "homepage": "/",
     "keywords": [
         "bank",
         "frontend",
