--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         }
     ],
     "dependencies": {
-        "@ledgerhq/hw-app-str": "^4.0.0",
-        "@ledgerhq/hw-transport-u2f": "^4.0.0",
+        "@ledgerhq/hw-app-str": "^4.14.0",
+        "@ledgerhq/hw-transport-u2f": "^4.13.0",
         "@material-ui/core": "^1.2.0",
         "@material-ui/icons": "^1.1.0",
         "@xcmats/js-toolbox": "^0.3.5",
@@ -37,9 +37,9 @@
         "react": "^16.4.0",
         "react-dom": "^16.4.0",
         "react-event-listener": "^0.6.0",
-        "react-jss": "^8.4.0",
+        "react-jss": "^8.5.0",
         "react-redux": "^5.0.7",
-        "react-router-dom": "^4.3.0-rc.3",
+        "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
         "react-scrollbar-size": "^2.1.0",
