--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "^0.18.0",
         "bignumber.js": "^7.2.0",
         "classnames": "^2.2.6",
+        "firebase": "^5.0.4",
         "fuse.js": "^3.2.0",
         "history": "^4.7.2",
         "hoist-non-react-statics": "^2.5.4",
@@ -33,8 +34,8 @@
         "number-to-text": "^0.3.3",
         "prop-types": "^15.6.1",
         "raf": "^3.4.0",
-        "react-autosuggest": "^9.3.4",
         "react": "^16.4.0",
+        "react-autosuggest": "^9.3.4",
         "react-dom": "^16.4.0",
         "react-event-listener": "^0.6.0",
         "react-jss": "^8.5.1",
