--- a/package.json
+++ b/package.json
@@ -17,49 +17,50 @@
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.14.0",
         "@ledgerhq/hw-transport-u2f": "^4.13.0",
-        "@material-ui/core": "^1.2.1",
+        "@material-ui/core": "^1.2.2",
         "@material-ui/icons": "^1.1.0",
         "@xcmats/js-toolbox": "^0.3.6",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
-        "bignumber.js": "^7.2.0",
+        "bignumber.js": "^7.2.1",
         "classnames": "^2.2.6",
-        "fuse.js": "^3.2.0",
+        "fuse.js": "^3.2.1",
         "history": "^4.7.2",
-        "hoist-non-react-statics": "^2.5.4",
+        "hoist-non-react-statics": "^2.5.5",
         "jss": "^9.8.3",
         "lodash": "^4.17.10",
         "material-ui": "^0.20.1",
         "number-to-text": "^0.3.3",
         "prop-types": "^15.6.1",
         "raf": "^3.4.0",
+        "react": "^16.4.1",
         "react-autosuggest": "^9.3.4",
-        "react": "^16.4.0",
-        "react-dom": "^16.4.0",
-        "react-event-listener": "^0.6.0",
+        "react-dom": "^16.4.1",
+        "react-event-listener": "^0.6.1",
         "react-jss": "^8.5.1",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
         "react-scrollbar-size": "^2.1.0",
-        "react-swipeable-views": "^0.12.13",
+        "react-swipeable-views": "^0.12.14",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.2",
         "redux-thunk": "^2.3.0",
         "resolve-pathname": "^2.2.0",
         "sha.js": "^2.4.11",
-        "stellar-base": "^0.7.7",
-        "stellar-sdk": "^0.8.1",
+        "stellar-base": "^0.7.8",
+        "stellar-sdk": "^0.8.2",
         "toml": "^2.3.3",
         "typeface-roboto": "0.0.54"
     },
     "description": "Stellar Fox (frontend)",
     "devDependencies": {
-        "babel-eslint": "^8.2.2",
+        "@types/prop-types": "^15.5.3",
+        "babel-eslint": "^8.2.3",
         "eslint": "^4.19.1",
         "eslint-config-react-app": "^2.1.0",
-        "eslint-plugin-react": "^7.7.0",
+        "eslint-plugin-react": "^7.9.1",
         "rimraf": "^2.6.2"
     },
     "engines": {
