Config: installed @types/* as explicit dependencies.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
         "@ledgerhq/hw-transport-u2f": "^4.13.0",
         "@material-ui/core": "^1.2.2",
         "@material-ui/icons": "^1.1.0",
+        "@types/classnames": "^2.2.3",
+        "@types/history": "^4.6.2",
+        "@types/jss": "^9.5.2",
+        "@types/material-ui": "^0.21.2",
+        "@types/prop-types": "^15.5.3",
+        "@types/react-dom": "^16.0.6",
+        "@types/react-redux": "^5.0.19",
+        "@types/react-router-dom": "^4.2.7",
+        "@types/react-router-redux": "^5.0.13",
         "@xcmats/js-toolbox": "^0.3.6",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
@@ -56,7 +65,6 @@
     },
     "description": "Stellar Fox (frontend)",
     "devDependencies": {
-        "@types/prop-types": "^15.5.3",
         "babel-eslint": "^8.2.3",
         "eslint": "^4.19.1",
         "eslint-config-react-app": "^2.1.0",
