--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
         "react-scrollbar-size": "^2.1.0",
+        "react-stripe-elements": "^2.0.0",
         "react-swipeable-views": "^0.12.14",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.5",
