--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-dom": "^16.4.1",
         "react-event-listener": "^0.6.1",
         "react-jss": "^8.6.0",
+        "react-number-format": "^3.4.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
