--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
         }
     ],
     "dependencies": {
+        "@babel/runtime": "7.0.0-beta.55",
         "@ledgerhq/hw-app-str": "^4.21.0",
         "@ledgerhq/hw-transport-u2f": "^4.21.0",
-        "@material-ui/core": "^1.4.2",
-        "@material-ui/icons": "^2.0.0",
+        "@material-ui/core": "^1.4.3",
+        "@material-ui/icons": "^2.0.1",
         "@stellar-fox/redshift": "^0.2.0",
         "@types/classnames": "^2.2.6",
         "@types/history": "^4.7.0",
         "@types/jss": "^9.5.4",
         "@types/material-ui": "^0.21.5",
         "@types/prop-types": "^15.5.4",
-        "@types/react-dom": "^16.0.6",
+        "@types/react-dom": "^16.0.7",
         "@types/react-redux": "^6.0.5",
         "@types/react-router-dom": "^4.3.0",
         "@types/react-router-redux": "^5.0.15",
@@ -34,13 +35,13 @@
         "axios": "^0.18.0",
         "bignumber.js": "^7.2.1",
         "classnames": "^2.2.6",
-        "firebase": "^5.3.0",
+        "firebase": "^5.3.1",
         "fuse.js": "^3.2.1",
         "history": "^4.7.2",
         "hoist-non-react-statics": "^3.0.1",
         "jss": "^9.8.7",
         "lodash": "^4.17.10",
-        "material-ui": "^0.20.1",
+        "material-ui": "^0.20.2",
         "number-to-text": "^0.3.4",
         "prop-types": "^15.6.2",
         "raf": "^3.4.0",
@@ -49,27 +50,27 @@
         "react-dom": "^16.4.2",
         "react-event-listener": "^0.6.1",
         "react-jss": "^8.6.1",
-        "react-number-format": "^3.5.0",
+        "react-number-format": "^3.5.1",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "1.1.4",
         "react-scrollbar-size": "^2.1.0",
         "react-stripe-elements": "^2.0.1",
-        "react-swipeable-views": "^0.12.15",
+        "react-swipeable-views": "^0.12.16",
         "redux": "^4.0.0",
         "redux-devtools-extension": "^2.13.5",
         "redux-thunk": "^2.3.0",
         "resolve-pathname": "^2.2.0",
         "sha.js": "^2.4.11",
-        "stellar-sdk": "^0.10.1",
+        "stellar-sdk": "^0.10.2",
         "toml": "^2.3.3",
         "typeface-roboto": "0.0.54"
     },
     "description": "Stellar Fox (frontend)",
     "devDependencies": {
         "babel-eslint": "^8.2.6",
-        "eslint": "^5.2.0",
+        "eslint": "^5.3.0",
         "eslint-config-react-app": "^2.1.0",
         "eslint-plugin-react": "^7.10.0",
         "rimraf": "^2.6.2"
