--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "prop-types": "^15.6.2",
         "raf": "^3.4.0",
         "react": "^16.4.2",
+        "react-animated-css": "^1.0.4",
         "react-autosuggest": "^9.3.4",
         "react-dom": "^16.4.2",
         "react-event-listener": "^0.6.1",
