ESlint: don't enforce comma-dangle on single-line arrays and objects.

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,8 +32,8 @@
         "comma-dangle": [
             "error",
             {
-                "arrays": "always",
-                "objects": "always",
+                "arrays": "always-multiline",
+                "objects": "always-multiline",
                 "imports": "ignore",
                 "exports": "ignore",
                 "functions": "ignore"
