Config: dependencies update (mui, js-toolbox, redshift).

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.24.0",
         "@ledgerhq/hw-transport-u2f": "^4.28.0",
-        "@material-ui/core": "^3.4.0",
+        "@material-ui/core": "^3.5.1",
         "@material-ui/icons": "^3.0.1",
-        "@stellar-fox/redshift": "^0.4.5",
+        "@stellar-fox/redshift": "^0.4.6",
         "@types/classnames": "^2.2.6",
         "@types/history": "^4.7.2",
         "@types/jss": "^9.5.7",
@@ -36,7 +36,7 @@
         "@types/react-router-dom": "^4.3.1",
         "@types/react-router-redux": "^5.0.16",
         "@types/stellar-sdk": "^0.10.4",
-        "@xcmats/js-toolbox": "^0.6.11",
+        "@xcmats/js-toolbox": "^0.6.13",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
         "bignumber.js": "^8.0.1",
@@ -51,14 +51,14 @@
         "number-to-text": "^0.3.8",
         "prop-types": "^15.6.2",
         "raf": "^3.4.1",
-        "react": "^16.6.1",
+        "react": "^16.6.3",
         "react-animated-css": "^1.0.4",
         "react-autosuggest": "^9.4.2",
-        "react-dom": "^16.6.1",
+        "react-dom": "^16.6.3",
         "react-event-listener": "^0.6.4",
         "react-jss": "^8.6.1",
-        "react-number-format": "^4.0.3",
-        "react-redux": "^5.1.0",
+        "react-number-format": "^4.0.4",
+        "react-redux": "^5.1.1",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
         "react-scripts": "2.1.1",
@@ -104,7 +104,7 @@
         "build": "react-scripts build",
         "clean": "rimraf build && npm run clean:jsdoc",
         "clean:jsdoc": "rimraf ./jsdoc",
-        "clean:modules": "rimraf node_modules && rimraf package-lock.json",
+        "clean:modules": "rimraf package-lock.json && rimraf node_modules",
         "eject": "react-scripts eject",
         "jsdoc": "echo \"Generating jsdoc ...\" && jsdoc -c ./jsdoc.json -R ./README.md -r ./src/ -d ./jsdoc/",
         "lint": "eslint ./src/",
