--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "@ledgerhq/hw-transport-u2f": "^4.28.0",
         "@material-ui/core": "^3.5.1",
         "@material-ui/icons": "^3.0.1",
-        "@stellar-fox/redshift": "^0.4.6",
+        "@stellar-fox/cryptops": "^1.0.1",
+        "@stellar-fox/redshift": "^0.4.7",
         "@types/classnames": "^2.2.6",
         "@types/history": "^4.7.2",
         "@types/jss": "^9.5.7",
@@ -36,7 +37,7 @@
         "@types/react-router-dom": "^4.3.1",
         "@types/react-router-redux": "^5.0.16",
         "@types/stellar-sdk": "^0.10.4",
-        "@xcmats/js-toolbox": "^0.6.13",
+        "@xcmats/js-toolbox": "^0.6.14",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
         "bignumber.js": "^8.0.1",
