--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
         "@material-ui/styles": "^3.0.0-alpha.10",
         "@stellar-fox/cryptops": "^1.0.4",
         "@stellar-fox/redshift": "^1.0.2",
-        "@xcmats/js-toolbox": "^0.8.0",
+        "@xcmats/js-toolbox": "^0.8.1",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.18.0",
         "bignumber.js": "^8.1.1",
         "classnames": "^2.2.6",
-        "firebase": "^5.9.2",
+        "firebase": "^5.9.3",
         "fuse.js": "^3.4.4",
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
@@ -48,6 +48,7 @@
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.8.6",
         "react-event-listener": "^0.6.6",
+        "react-google-recaptcha": "^1.0.5",
         "react-jss": "^8.6.1",
         "react-number-format": "^4.0.7",
         "react-redux": "^5.1.1",
