Update manifest. Add mobile meta tags.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Cygnus",
-  "name": "Your lifetime bank.",
+  "name": "Cygnus - Your lifetime bank.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "rgb(244, 176, 4)",
+  "background_color": "rgb(15, 46, 83)"
 }
