--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "dependencies": {
         "@ledgerhq/hw-app-str": "^4.68.4",
         "@ledgerhq/hw-transport-u2f": "^4.68.4",
-        "@material-ui/core": "^3.9.3",
-        "@material-ui/icons": "^3.0.2",
-        "@material-ui/styles": "^3.0.0-alpha.10",
+        "@material-ui/core": "^4.3.3",
+        "@material-ui/icons": "^4.2.1",
+        "@material-ui/styles": "^4.3.3",
         "@stellar-fox/cryptops": "^1.0.4",
         "@stellar-fox/redshift": "^1.0.2",
         "@xcmats/js-toolbox": "^0.8.2",
         "autosuggest-highlight": "^3.1.1",
         "axios": "^0.19.0",
-        "bignumber.js": "^8.1.1",
+        "bignumber.js": "^9.0.0",
         "classnames": "^2.2.6",
         "d3": "^5.11.0",
-        "firebase": "^5.11.1",
+        "firebase": "^6.4.1",
         "fuse.js": "^3.4.5",
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
@@ -55,7 +55,7 @@
         "react-redux": "^5.1.1",
         "react-router-dom": "^4.3.1",
         "react-router-redux": "^5.0.0-alpha.9",
-        "react-scripts": "2.1.8",
+        "react-scripts": "3.1.1",
         "react-scrollbar-size": "^2.1.0",
         "react-swipeable-views": "^0.13.3",
         "redux": "^4.0.4",
@@ -63,7 +63,7 @@
         "redux-thunk": "^2.3.0",
         "resolve-pathname": "^3.0.0",
         "sha.js": "^2.4.11",
-        "stellar-sdk": "^0.15.4",
+        "stellar-sdk": "^2.3.0",
         "toml": "^3.0.0",
         "trianglify": "^2.0.0",
         "typeface-roboto": "0.0.75"
@@ -83,7 +83,7 @@
         "cross-env": "^5.2.0",
         "jsdoc": "^3.6.3",
         "minami": "^1.2.3",
-        "rimraf": "^2.6.3"
+        "rimraf": "^3.0.0"
     },
     "engines": {
         "node": ">=6.0.0",
@@ -118,5 +118,5 @@
         "dev": "rimraf ./src/config.js && ln -s ./config.localhost.js ./src/config.js",
         "prod": "rimraf ./src/config.js && ln -s ./config.production.js ./src/config.js"
     },
-    "version": "0.1.58"
+    "version": "0.1.57"
 }
